// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer should display the Favorites default message if no Favorites 1`] = `
<main
  className="CardContainer"
>
  <div>
    <h2
      className="favorites-default"
    >
      You currently don't have any favorites.
    </h2>
    <p
      className="favorites-default-text"
    >
      Click on the lightsaber in the top right corner of a card to favorite it.
    </p>
  </div>
</main>
`;

exports[`CardContainer should match the snapshot 1`] = `
<main
  className="CardContainer"
>
  <h2
    className="default"
  >
    Select a Category or Favorites
  </h2>
</main>
`;

exports[`CardContainer should render cards when it gets contents 1`] = `
<CardContainer
  cardContents={
    Array [
      Object {
        "name": "Luke Skywalker",
      },
      Object {
        "name": "Leia Organa",
      },
      Object {
        "name": "R2-D2",
      },
    ]
  }
  currentDisplay="default"
>
  <main
    className="CardContainer"
  >
    <Card
      contents={
        Object {
          "name": "Luke Skywalker",
        }
      }
      currentDisplay="default"
      key="Luke Skywalker"
    >
      <article
        className="Card default-bg-off"
      >
        <h3
          className="name is-white"
        >
          Luke Skywalker
        </h3>
        <div
          className="saber default-is-off"
        />
        <img
          alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
          className="hilt"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          src="lightsaber-wt.png"
        />
        <ul
          className="content"
        />
      </article>
    </Card>
    <Card
      contents={
        Object {
          "name": "Leia Organa",
        }
      }
      currentDisplay="default"
      key="Leia Organa"
    >
      <article
        className="Card default-bg-off"
      >
        <h3
          className="name is-white"
        >
          Leia Organa
        </h3>
        <div
          className="saber default-is-off"
        />
        <img
          alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
          className="hilt"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          src="lightsaber-wt.png"
        />
        <ul
          className="content"
        />
      </article>
    </Card>
    <Card
      contents={
        Object {
          "name": "R2-D2",
        }
      }
      currentDisplay="default"
      key="R2-D2"
    >
      <article
        className="Card default-bg-off"
      >
        <h3
          className="name is-white"
        >
          R2-D2
        </h3>
        <div
          className="saber default-is-off"
        />
        <img
          alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
          className="hilt"
          onClick={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          src="lightsaber-wt.png"
        />
        <ul
          className="content"
        />
      </article>
    </Card>
  </main>
</CardContainer>
`;
